♻️ Refactor: 로그인 password 로직 수정, swagger 수정
